# MCP-Collection

./: .gitignore  .mcp.json  Caddyfile  README.md  docker-compose.yaml
.github/workflows/: build-and-push.yml  kali-build-push.yml  proxmox-build-push.yml
Document/: Dockerfile  document-mcp.yaml  document_server.py  generate_chart.py  generate_clean.py  generate_final.py  generate_real_scan.py  generate_real_scan_direct.py  readme.txt  requirements.txt  sample_report.txt
Document/template/: VAPT Report.docx
Kali-Linux/: Context.md  Dockerfile  RestartClaude.ps1  Verification.ps1  pentest_server.py
Kali-Linux-Docker/: readme.txt
Kali-Linux-Remote/: pentest_server.py  readme.txt  requirements.txt
Proxmox/: .dockerignore  Caddyfile  Dockerfile  PROXMOX_PASSWORD.txt  __init__.py  build_and_push.ps1  debug_proxmox_direct.py  docker-compose.yaml  proxmox-mcp.yaml  proxmox-test.yaml  proxmox_server.py  pyproject.toml  readme.md  readme.txt  registry.yaml  requirements.txt  restart_claude.cmd
Proxmox/examples/: README.md  claude-desktop-docker-example.json  claude-desktop-docker-gateway-example.json  claude-desktop-uvx-example.json  qwq-desktop-python-example.json  qwq-desktop-uvx-example.json  vscode-mcp-example.json
