[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxmox-mcp"
version = "0.1.0"
description = "MCP Server for Proxmox VE management"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.2.0",
    "proxmoxer",
    "pydantic",
    "paramiko"
]

[project.scripts]
proxmox-mcp = "proxmox_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]